Fixed z-index.

--- a/packages/ckeditor5-emoji/theme/emojipicker.css
+++ b/packages/ckeditor5-emoji/theme/emojipicker.css
@@ -33,5 +33,5 @@
 
 /* See: https://github.com/ckeditor/ckeditor5/issues/17964 */
 div.ck.ck-balloon-panel:has( .ck.ck-emoji ) {
-	z-index: 999;
+	z-index: calc( var( --ck-z-dialog ) + 1 );
 }
